--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 axum = "0.6.20"
 firestore = "0.37.2"
 serde = { version = "1.0.189", features = ["derive"] }
+serde_json = "1.0.117"
 tokio = { version = "1.33.0", features = ["full", "macros", "rt-multi-thread"] }
 tracing = "0.1.39"
 tracing-subscriber = "0.3.17"
