--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.20"
+chrono = "0.4.38"
 firestore = "0.37.2"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.117"
