--- a/bin/all-o-stasis/Cargo.toml
+++ b/bin/all-o-stasis/Cargo.toml
@@ -12,4 +12,4 @@ serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.33.0", features = ["full", "macros", "rt-multi-thread"] }
 tracing = "0.1.39"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
