fixes, deserialization error

--- a/bin/all-o-stasis/Cargo.toml
+++ b/bin/all-o-stasis/Cargo.toml
@@ -8,6 +8,7 @@ otp = { path = "../../avers-otp", version = "0.1.0" }
 axum = "0.6.20"
 chrono = "0.4.38"
 firestore = "0.37.2"
+futures = "0.3"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.33.0", features = ["full", "macros", "rt-multi-thread"] }
