--- a/bin/all-o-stasis/Cargo.toml
+++ b/bin/all-o-stasis/Cargo.toml
@@ -12,5 +12,6 @@ futures = "0.3"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.33.0", features = ["full", "macros", "rt-multi-thread"] }
+tower-http = { version = "0.3", features = ["cors"] }
 tracing = "0.1.39"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
