--- a/bin/all-o-stasis/Cargo.toml
+++ b/bin/all-o-stasis/Cargo.toml
@@ -11,6 +11,8 @@ chrono = "0.4.38"
 cookie = "0.18"
 firestore = "0.44"
 futures = "0.3"
+rand = "0.9.0"
+sendgrid = "0.23.0"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.33.0", features = ["full", "macros", "rt-multi-thread"] }
