--- a/bin/all-o-stasis/Cargo.toml
+++ b/bin/all-o-stasis/Cargo.toml
@@ -15,6 +15,7 @@ rand = "0.9.0"
 sendgrid = "0.23.0"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.117"
+sha2 = "0.10.8"
 tokio = { version = "1.33.0", features = ["full", "macros", "rt-multi-thread"] }
 tower-http = { version = "0.6", features = ["cors"] }
 tracing = "0.1.39"
