--- a/avers-otp/Cargo.toml
+++ b/avers-otp/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
-firestore = "0.37.2"
+quickcheck = "1"
+quickcheck_macros = "1"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.117"
