--- a/avers-otp/Cargo.toml
+++ b/avers-otp/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+arbitrary = { version = "1", features = ["derive"] }
 chrono = "0.4.38"
 quickcheck = "1"
 quickcheck_macros = "1"
