deploy: fix name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   backup:
     runs-on: ubuntu-latest
-    name: backup
+    name: deploy
     permissions:
       contents: "read"
       id-token: "write"
