--- a/bin/all-o-stasis/Cargo.toml
+++ b/bin/all-o-stasis/Cargo.toml
@@ -12,7 +12,7 @@ cookie = "0.18"
 firestore = "0.44"
 futures = "0.3"
 rand = "0.9.0"
-sendgrid = "0.23.0"
+reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.117"
 sha2 = "0.10.8"
